@@ -1,3 +1,8 @@
+2005-03-14  Mark McLoughlin  <mark@skynet.ie>
+
+	* acinclude.m4: remove - we don't use anything from
+	it anymore. Fixes bug #153049
+
 2005-03-07  Mark McLoughlin  <mark@skynet.ie>
 
 	* configure.in: post-release bump to 2.10.1.
